Se quitó el hover de las tablas y se agregaron nuevos campos junto con llenado

--- a/proyecto CFDI 4.0 unidad 2/assets/css/style.css
+++ b/proyecto CFDI 4.0 unidad 2/assets/css/style.css
@@ -8604,7 +8604,7 @@ pre {
   background-color: #000000; }
 
 .table-hover tbody tr:hover {
-  color: #212529;
+  color: whitesmoke;
   background-color: #000000; }
 
 .table-primary,
